--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "Server.js",
   "type":"module",
   "scripts": {
-    "server":"nodemon server.js"
+    "start": "node Server.js",
+    "dev": "nodemon Server.js"
   },
   "author": "",
   "license": "ISC",
