--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "preact": "^10.23.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "vite": "^5.4.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.0",
